--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  csv: ^4.0.1
+  html: any
+  intl: ^0.15.7
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
