Make test mode use cached departurevision data; small UI tweaks

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,5 +45,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/njtransit/
     - assets/
+    - assets/njtransit/
+    - assets/njtransit/dv_cache/
+
