--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   intl: ^0.15.7
   path: ^1.6.2
   path_provider: ^0.5.0
+  shared_preferences: any
 
 dev_dependencies:
   flutter_test:
