--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: choochoo
-description: A new Flutter project.
+description: Notifies the user when their NJ Transit train is going to be late.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -26,6 +26,8 @@ dependencies:
   path: ^1.6.2
   path_provider: ^0.5.0
   shared_preferences: any
+  flutter_local_notifications: ^0.4.5
+
 
 dev_dependencies:
   flutter_test:
