--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   path_provider: ^0.5.0
   shared_preferences: any
   flutter_local_notifications: ^0.4.5
+  android_alarm_manager: ^0.4.0
 
 
 dev_dependencies:
